# article_project

./: .dockerignore  .env.docker  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
article/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_options_alter_article_content_and_more.py  0005_alter_userprofile_managers_alter_userprofile_email.py  0006_alter_article_creator.py
django_project/: settings.py  urls.py
locale/fa/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/article/: base.html  create_article.html  delete_article.html  home.html  update_article.html
templates/article/layouts/: base_form.html
templates/registration/: login.html
