[project]
name = "django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "erfan",email = "eazari.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-allauth[socialaccount] (>=65.10.0,<66.0.0)"
]

[tool.poetry]
packages = [{include = "django_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
